[metadata]
name = yolo
version = attr: yolo.__version__
description = You Only Live Once
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/yolo
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    yolo
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    fastapi
    loguru
    playwright
    pydantic
    python-stopwatch
python_requires = >=3.11
packages = find: